--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'java'
 apply plugin: 'application'
 
 // This is the class with the main to run when the application starts.
-mainClassName = 'yahav.geojson.GeoJsonApplication'
+mainClassName = 'yahav.openweathermap.OpenWeatherMapFeed'
 
 repositories {
     mavenCentral()
